# back_office_sanfelo

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CSP_COMPLETE_SUMMARY.md  CSP_DEPLOYMENT_CHECKLIST.md  CSP_IMPLEMENTATION.md  CSP_IMPLEMENTATION_SUMMARY.md  CSP_SETTINGS_REFERENCE.md  DATABASE_ROUTER.md  DATABASE_ROUTER_QUICK_REF.md  Dockerfile  FILE_MANIFEST.md  README.md  REFACTORING_COMPLETE.md  ROLE_BASED_ACCESS_CONTROL.md  ROUTER_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  justfile  manage.py  pyproject.toml
.agents/agent/: doc-octopus.md  l337-lady.md
.agents/skills/django/: SKILL.md
.agents/skills/documentation/: SKILL.md
.agents/skills/preferred-commands/: SKILL.md
.opencode/skills/design-system/: SKILL.md
bitacora/: admin.py  models.py
bitacora/migrations/: 0001_initial.py
buzon/: admin.py  models.py  services.py
buzon/migrations/: 0001_initial.py
catalogos/: admin.py  models.py
catalogos/migrations/: 0001_initial.py
core/: __main__.py  account_adapter.py  admin.py  admin_utils.py  apps.py  db_router.py  managers.py  middleware.py  model_config.py  schema_validator.py  signals.py  urls.py  views.py
core/admin/: __init__.py  actions.py  base.py  mixins.py  site.py  user_admin.py
core/management/commands/: makemigrations.py  setup_roles.py  sftp.py  simular_pago.py  validate_schema.py
core/rbac/: __init__.py  constants.py
core/templates/core/widgets/: read_only_password_hash.html
core/templatetags/: tramites_dashboard.py
costos/: admin.py  models.py
costos/migrations/: 0001_initial.py
docker/: entrypoint.sh  healthcheck.py
docs/: COMANDOS_DJANGO.md  DJANGO_ADMIN_SETUP.md  ENVIRONMENT_VARIABLES.md  ENV_VARS_IMPLEMENTATION.md  ESTADOS-TRAMITES.md  EXECUTIVE_SUMMARY.md  METHODOLOGIES_QUICKREF.md  MODEL_MAPPINGS.md  PROGRESO.md  QUICKSTART.md  README.md  README_MAP.md  REQUERIMIENTOS_ALTO_NIVEL.md  RESTRUCTURING_PLAN.md  SCHEMA_VALIDATOR.md  SCRIPTS_REMOVAL.md  TASKS.md  VISUAL_DIAGRAM.md  sftp-host-key.md
docs/00-system-design/: REQUERIMIENTOS_ALTO_NIVEL.md
docs/01-onboarding/: architecture-overview.md  glossary.md  overview.md
docs/02-tutorials/admins/: manage-catalogs.md  seguridad-auditoria-produccion.md  setup-users.md
docs/02-tutorials/developers/: first-api-call.md  local-dev-setup.md
docs/02-tutorials/operators/: create-tramite.md  manage-workflow.md
docs/03-guides/admins/: add-peritos.md  configure-costs.md  manage-groups.md
docs/03-guides/operators/: change-status.md  search-tramites.md  upload-docs.md
docs/03-guides/sysadmins/: deploy-production.md
docs/05-reference/: commands.md  environment-vars.md  models.md  rbac.md  sftp.md
docs/05-reference/commands/: index.md
docs/05-reference/configuration/: environment-vars.md
docs/06-decisions/: 001-seleccion-stack-base.md  002-configuracion-multiples-bases-de-datos.md  003-estrategia-caching-rendimiento.md  003-postgresql-schema-separation.md  004-logging-monitoreo.md  005-despliegue-docker-gunicorn.md  006-permisos-admin-operador.md  007-implementacion-rbac-django-60.md  008-postgresql-schema-separation.md  009-remove-schema-validator.md  009-vista-postgresql-para-tramites.md  010-integracion-con-sftp.md  010-remove-asignacion-tramite.md  011-docs-cleanup.md  012-stack-base-actualizado.md  013-rbac-tres-roles.md  README.md  adr-template.md
docs/_templates/: concept-template.md  guide-template.md  reference-template.md  tutorial-template.md
fixtures/: backend.json
nginx/: nginx.conf
sanfelipe/: __init__.py  apps.py  asgi.py  db_router.py  routers.py  settings.py  settings_test.py  urls.py  wsgi.py
sanfelipe/settings/: __init__.py  jazzmin.py  logging.py  security.py  sftp.py  tenancy.py
scripts/: README.md  configure-keycloak.sh
static/admin/css/: backoffice.css  dark_mode.css  minimalist.css
static/admin/js/: quick_actions.js
templates/: csp_example.html
templates/admin/: asignar_tramites.html  base.html  base_site.html  buzon_asignacion_changelist.html  index.html  modificar_asignacion.html  tramite_detail.html  tramite_quick_confirm.html
templates/admin/auth/user/: asignar_rol.html
templates/admin/includes/: dashboard_cards.html
templates/core/: home.html
tests/: README.md  conftest.py  test_db_router.py
tests/bitacora/: test_admin.py  test_models.py
tests/buzon/: __init__.py  test_admin.py  test_models.py
tests/catalogos/: test_admin.py  test_models.py
tests/core/: test_admin.py  test_admin_generic.py  test_audit_trail.py  test_error_handling.py  test_integration.py  test_management.py  test_permissions.py
tests/costos/: test_admin.py  test_models.py
tests/factories/: __init__.py  auth.py  bitacora.py  catalogos.py  costos.py  tramites.py
tests/sanfelipe/: test_asignacion.py  test_csp.py  test_db_router.py
tests/tramites/: test_admin.py  test_models.py  test_sftp.py  test_views.py
tramites/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  forms.py  models.py  services.py  sftp.py  signals.py  urls.py  views.py
tramites/migrations/: 0001_initial.py  0002_alter_actividades_options_alter_tramite_options_and_more.py  0002_alter_tramite_options.py  0003_asignaciontramite.py  0003_catalogos_and_fk_migration.py
tramites/models/: __init__.py  actividades.py  asignacion.py  catalogos.py  managers.py  relaciones.py  tramite.py  tramite_unificado.py
tramites/templatetags/: admin_extras.py
