[project]
name = "backoffice_tramites"
version = "0.1.0"
description = "Backoffice de tramites - Microservice for San Felipe Government"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "psycopg2-binary>=2.9.11",
    "pillow>=11.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.1.0",
]
