[project]
name = "backoffice_tramites"
version = "0.1.0"
description = "Backoffice de tramites - Microservice for San Felipe Government"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "psycopg2-binary>=2.9.11",
    "pillow>=11.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]
prod = [
    "gunicorn>=25.1.0",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# Enable these rule sets for Django projects
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]

ignore = [
    # Django often uses lowercase models
    "PLR2004",  # Magic value comparison
    # Allow _ in __init__.py for imports
    "RUF100",   # Unused noqa directive
    # Django uses bare except
    "B001",
    # Sometimes we need print for debugging
    "T201",
    # Allow __init__.py to be empty sometimes
    "PLR2004",
    # Complex comprehensions can be readable
    "C416",
]

[tool.ruff.lint.per-file-ignores]
# Django settings files often have long lines
"sanfelipe/settings.py" = ["E501"]
# Tests can have long lines
"tests/**/*.py" = ["E501", "B011"]
# Allow _ in migrations
"migrations/**/*.py" = ["B008", "C400", "C401", "C402", "C403", "C404", "C405", "C406", "C407", "C408", "C409", "C410", "C411"]
# Allow unused imports in __init__.py
"__init__.py" = ["F401", "UP035"]

[tool.ruff.lint.isort]
# Known-first-party for Django apps
known-first-party = ["tramites", "catalogos", "bitacora", "costos", "core", "sanfelipe"]

[tool.ruff.lint.pydocstyle]
# Google-style docstrings (common in Django)
convention = "google"

[tool.ruff.format]
# Use single quotes for Python
quote-style = "single"
# Use trailing commas
trailing-comma = "all"
